Works to hover changes color

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <button>Change Squares</button>
     <div class="grid">
-        
+        <!-- <div class="row1"></div>
+        <div class="row2"></div>
+        <div class="row3"></div>
+        <div class="row4"></div> -->
     </div>
     <script src="script.js" defer></script>
 </body>
